[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "smc-validation"
version = "0.1.0"
description = "Deterministic backtesting and Monte Carlo validation for SMC probabilistic trading systems"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
test = ["pytest>=7.4"]

[project.scripts]
smc-validate = "smc_validation.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["smc_validation*", "core*", "engines*"]
exclude = ["data*", "tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
pythonpath = ["."]
